--- a/appcss.css
+++ b/appcss.css
@@ -1,9 +1,34 @@
+body {
+  font-family: 'IBM Plex Serif', serif;
+}
+
+ul {
+  list-style: none;
+}
+
 h1 {
   margin: 0 auto;
+  border-bottom: 1px solid lightgrey;
+  padding: 10px;
+}
+
+#picker {
+  padding: 10px;
+  margin-left: 50px;
+  border-radius: 5px;
+  font-size: 20px;
+  margin-right: 100px;
+  background-color: #e0eaf9;
+  margin-top: 217px;
+}
+
+.selected {
+  background-color: #e0eaf9;
 }
 
 .page-contents {
   display: flex;
+  padding-top: 20px;
 }
 
 .dogs {
@@ -12,9 +37,27 @@ h1 {
 
 .dog-master-list {
   height: 500px;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-right: 20px;
 }
 
 img {
   border-radius: 5px;
+  margin-right: 20px;
+}
+
+.adopted-list {
+  padding: 10px;
+}
+
+.unadopt {
+  padding: 4px;
+  border-radius: 5px;
+  margin-left: 30px;
+}
+
+.adoptee {
+  border-bottom: 1px solid lightgrey;
+  padding: 17px;
 }
