--- a/appcss.css
+++ b/appcss.css
@@ -20,6 +20,7 @@ h1 {
   margin-right: 100px;
   background-color: #e0eaf9;
   margin-top: 217px;
+  cursor: pointer;
 }
 
 .selected {
@@ -40,9 +41,15 @@ h1 {
   overflow-y: scroll;
   overflow-x: hidden;
   margin-right: 20px;
+  background-color: white;
 }
 
-.dog-photo {
+.dog-master-list li:hover{
+  background-color: #e0eaf9;
+  cursor: pointer;
+}
+
+img {
   border-radius: 5px;
   margin-right: 20px;
 }
@@ -55,6 +62,7 @@ h1 {
   padding: 4px;
   border-radius: 5px;
   margin-left: 30px;
+  cursor: pointer;
 }
 
 .adoptee {
@@ -71,6 +79,7 @@ h1 {
 
 .github-icon {
   padding: 5px;
+  cursor: pointer;
 }
 
 .github-real {
@@ -80,6 +89,7 @@ h1 {
 
 .linkedin-icon {
   padding: 9px;
+  cursor: pointer;
 }
 
 .linkedin-real {
