--- a/appcss.css
+++ b/appcss.css
@@ -22,7 +22,7 @@ h1 {
   background-color: #e0eaf9;
   margin-top: 50px;
   cursor: pointer;
-  width: 553px;
+  width: 86%;
 }
 
 #picker:hover {
@@ -41,6 +41,7 @@ h1 {
 
 .dogs {
   display: flex;
+  width: 80%;
 }
 
 .dog-master-list {
@@ -69,15 +70,15 @@ img {
 }
 
 .dog-pic {
-  width: 500px;
-  height: 370px;
+  width: 78%;
+  height: 58%;
   border: 26px solid pink;
   overflow: hidden;
 }
 
 .adopted-list {
   padding: 10px;
-  width: 208px;
+  width: 103%;
   margin-top: 30px;
 }
 
@@ -106,8 +107,8 @@ img {
 }
 
 .picker-and-pic {
-  margin-left: 33px;
-  width: 640px;
+  margin-left: 2%;
+  width: 63%;
 }
 
 .dogs-and-options::-webkit-scrollbar {
